--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ http://www.templatemo.com/tm-467-easy-profile
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<img src="images/davd-profile.png" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+				<img src="images/profile.png" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
-				<h1 class="tm-title bold shadow">Hi, I am David</h1>
-				<h1 class="white bold shadow">DevOps Engineer</h1>
+				<h1 class="tm-title bold shadow">Hi, I'm dav-par</h1>
+				<h1 class="white bold shadow">A DevOps Engineer</h1>
 			</div>
 		</div>
 	</div>
