--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ http://www.templatemo.com/tm-467-easy-profile
 		<div class="col-md-6 col-sm-12">
 			<div class="about">
 				<h3 class="accent">Nice to meet you</h3>
-				<p>I have a passion for technology, incorporating it into all aspects of his work and personal life. I thrive on bringing technology and people together to solve real-world problems. 
+				<p>I have a passion for technology, incorporating it into all aspects of my work and personal life. I thrive on bringing technology and people together to solve real-world problems. 
 
 				<p>Starting as a charity apprentice I was quickly promoted to Senior shop manager and pursued a career in volunteer management. Working at the Tate Galleries and then the Natural History Museum. I worked on large projects with numerous stakeholders using technology to solve problems at these major institutions.</p>
 					
-				<p>During the lockdown I was able to further improve my technical abilities in pursuit of a career in tech. I completed courses with Codecademy, spoke to those in the industry and took on personal projects, including home automation, websites and building an android app. I am ready to take on a new challenge combining his soft skills from the heritage sector with his newly honed hard skills in DevOps.</p>
+				<p>During the lockdown I was able to further improve my technical abilities in pursuit of a career in tech. I completed courses with Codecademy, spoke to those in the industry and took on personal projects, including home automation, websites and building an android app. I am ready to take on a new challenge combining my soft skills from the heritage sector with my newly honed hard skills in DevOps.</p>
 					
-				<p>I am very passionate about EDI and takes an active role in encouraging and celebrating diversity at all the places he has worked and in his personal life.</p>
+				<p>I am very passionate about EDI and takes an active role in encouraging and celebrating diversity at all the places I have worked and in his personal life.</p>
 
 			</div>
 		</div>
@@ -116,7 +116,7 @@ http://www.templatemo.com/tm-467-easy-profile
 							<div class="education-school">
 								<h5>2022</h5>
 							</div>
-						<p class="education-description">In this intensive DevOps course I devloped my technical as well as my soft skills.</p>
+						<p class="education-description">In this intensive DevOps course I developed my technical as well as my soft skills.</p>
 					</div>
 			</div>
 		</div>
